[gd_scene load_steps=73 format=3 uid="uid://btspxe0fqidd1"]

[ext_resource type="Script" uid="uid://crj28w3fh4vvr" path="res://Scripts/heating.gd" id="1_d0ro7"]
[ext_resource type="Script" uid="uid://bd3alhuf38w7i" path="res://Scripts/power.gd" id="2_uwk6c"]
[ext_resource type="Texture2D" uid="uid://btmwiu1a2mdsb" path="res://Assets/Tools/Charger/chargeon1.png" id="3_k7xkd"]
[ext_resource type="Texture2D" uid="uid://se82gfijdrnh" path="res://Assets/Tools/Charger/chargeon2.png" id="4_64id4"]
[ext_resource type="Texture2D" uid="uid://cpmfdqwmnc3d8" path="res://Assets/Tools/Charger/chargeoff.png" id="5_l7y8l"]
[ext_resource type="Script" uid="uid://dj8jrsn5802dw" path="res://Scripts/screen.gd" id="6_qupvh"]
[ext_resource type="Texture2D" uid="uid://d2rsddiym5ss5" path="res://Assets/Tools/Screen/Screen.png" id="7_75tmy"]
[ext_resource type="Script" uid="uid://bvgu2g7pv4xn7" path="res://Scripts/screen_status.gd" id="8_637a8"]
[ext_resource type="Script" uid="uid://bxy2tl5q241fx" path="res://Scripts/blink.gd" id="9_w3en0"]
[ext_resource type="Texture2D" uid="uid://wvq61doly7tr" path="res://Assets/Tools/Blink/blink.png" id="10_jkcd8"]
[ext_resource type="Script" uid="uid://b4ujlfkjd0f5c" path="res://Scripts/blink_status.gd" id="11_hb331"]
[ext_resource type="Script" uid="uid://d0pw73dj3skgq" path="res://Scripts/false_human.gd" id="12_hh621"]
[ext_resource type="Texture2D" uid="uid://bel848hgwllf3" path="res://Assets/Robots/False_Human/False_Human_jumpscare.png" id="13_jhnia"]
[ext_resource type="Texture2D" uid="uid://c4npokoci6fmd" path="res://Assets/Robots/False_Human/False_Human.png" id="14_2m4s1"]
[ext_resource type="AudioStream" uid="uid://dnyit2cpdvx72" path="res://Sound/Robots/False_Human/Leave (1).mp3" id="15_iu7dq"]
[ext_resource type="AudioStream" uid="uid://du2g1gyyqk0xh" path="res://Sound/Robots/False_Human/False_Breathing.mp3" id="16_wahdi"]
[ext_resource type="AudioStream" uid="uid://ceugkovaxj6rc" path="res://Sound/Robots/False_Human/false_jumpscare.mp3" id="17_lwyey"]
[ext_resource type="Script" uid="uid://gw3w6qgk4cla" path="res://Scripts/the_aware.gd" id="18_1cppf"]
[ext_resource type="Texture2D" uid="uid://csrwqcf8o1akf" path="res://Assets/Robots/The_Aware/aware_can't_see.png" id="19_mab3i"]
[ext_resource type="Texture2D" uid="uid://buy3t1glta6v5" path="res://Assets/Robots/The_Aware/aware_stage1.png" id="20_1tg7v"]
[ext_resource type="Texture2D" uid="uid://c6miwachqxa6o" path="res://Assets/Robots/The_Aware/aware_stage2.png" id="21_20x37"]
[ext_resource type="Texture2D" uid="uid://bx6axnihvvkx7" path="res://Assets/Robots/The_Aware/aware_stage3.png" id="22_qbdne"]
[ext_resource type="Texture2D" uid="uid://wvqptmabswmn" path="res://Assets/Robots/The_Aware/aware_shocked.png" id="23_63cb6"]
[ext_resource type="AudioStream" uid="uid://dvx3wl3ob8low" path="res://Sound/Robots/The_Aware/aware_shocked.mp3" id="24_576as"]
[ext_resource type="Texture2D" uid="uid://bc7bu80uhwyf3" path="res://Assets/Robots/The_Aware/Aware_jumpscare.png" id="25_6bhsf"]
[ext_resource type="AudioStream" uid="uid://dhgtv2kniffcq" path="res://Sound/Robots/The_Aware/aware_jumpscare.mp3" id="26_yunic"]
[ext_resource type="Script" uid="uid://bs7i081x2mx7i" path="res://Scripts/stall.gd" id="27_jol3d"]
[ext_resource type="Texture2D" uid="uid://dye4m7owt58h2" path="res://Assets/Robots/Stall/stall_error.png" id="28_n44lc"]
[ext_resource type="Script" uid="uid://cv5eibniiqt5m" path="res://Scripts/power_drain.gd" id="29_a8b36"]
[ext_resource type="AudioStream" uid="uid://cvahg6jld883q" path="res://Sound/Robots/Stall/error-03-125761.mp3" id="30_2v721"]
[ext_resource type="Texture2D" uid="uid://cf3klouywnt8m" path="res://Assets/Robots/Stall/Stall_jumpscare.png" id="31_gjii0"]
[ext_resource type="AudioStream" uid="uid://bueaxbshynnau" path="res://Sound/Robots/Stall/stall_jumpscare.mp3" id="32_6nivd"]
[ext_resource type="Script" uid="uid://357igas760ux" path="res://Scripts/crooked.gd" id="33_4lb3r"]
[ext_resource type="Texture2D" uid="uid://bl8k6fuwxlstd" path="res://Assets/Robots/Crooked/Crooked_appear.png" id="34_4rov5"]
[ext_resource type="Texture2D" uid="uid://ipdal8vris1y" path="res://Assets/Robots/Crooked/Crooked_gone.png" id="35_a7h6w"]
[ext_resource type="Texture2D" uid="uid://yo2saek4dr5i" path="res://Assets/Tools/Fan/fanoff.png" id="36_sarkg"]
[ext_resource type="Texture2D" uid="uid://jylb1sd53cvg" path="res://Assets/Tools/Fan/fanon.png" id="37_o76y0"]
[ext_resource type="Texture2D" uid="uid://chnpg4x8ncy4x" path="res://Assets/Robots/Crooked/crooked_jumpscare.png" id="38_uxvug"]
[ext_resource type="AudioStream" uid="uid://dgbnvcxktq4di" path="res://Sound/Robots/Crooked/crooked_jumpscare.mp3" id="39_qxgqg"]
[ext_resource type="Script" uid="uid://njcinqu7grh4" path="res://Scripts/shock.gd" id="40_65yj4"]
[ext_resource type="Script" uid="uid://djn6lfuq668jw" path="res://Scripts/shock_status.gd" id="41_x68vh"]
[ext_resource type="Script" uid="uid://de6jmf5hqkgxr" path="res://Scripts/downloads.gd" id="42_7umhw"]
[ext_resource type="Script" uid="uid://c3tm8hswsqwl4" path="res://Scripts/tasks.gd" id="43_bxs6h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jw32o"]
atlas = ExtResource("3_k7xkd")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_50glp"]
atlas = ExtResource("4_64id4")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy5pj"]
atlas = ExtResource("5_l7y8l")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_bmxlf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw32o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50glp")
}],
"loop": true,
"name": &"ON",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy5pj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v1gob"]
atlas = ExtResource("7_75tmy")
region = Rect2(0, 0, 1000, 700)

[sub_resource type="SpriteFrames" id="SpriteFrames_jw32o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1gob")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bmxlf"]
atlas = ExtResource("10_jkcd8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_4kpch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmxlf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpo4j"]
atlas = ExtResource("13_jhnia")
region = Rect2(0, 0, 1000, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p5hy"]
atlas = ExtResource("14_2m4s1")
region = Rect2(0, 0, 1000, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1m7h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpo4j")
}],
"loop": true,
"name": &"Jumpscare",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p5hy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3tgeq"]
atlas = ExtResource("19_mab3i")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4ay3"]
atlas = ExtResource("20_1tg7v")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_aht7i"]
atlas = ExtResource("21_20x37")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jffn"]
atlas = ExtResource("22_qbdne")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwpts"]
atlas = ExtResource("23_63cb6")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_kpo4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tgeq")
}],
"loop": true,
"name": &"Hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4ay3")
}],
"loop": true,
"name": &"Stage1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aht7i")
}],
"loop": true,
"name": &"Stage2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jffn")
}],
"loop": true,
"name": &"Stage3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwpts")
}],
"loop": true,
"name": &"aware_shocked",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4n42c"]
atlas = ExtResource("25_6bhsf")
region = Rect2(0, 0, 1000, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_5jffn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n42c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_x3rx7"]
atlas = ExtResource("31_gjii0")
region = Rect2(0, 0, 1000, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_6heos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3rx7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_btbly"]
atlas = ExtResource("34_4rov5")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvnwx"]
atlas = ExtResource("35_a7h6w")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_btbly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btbly")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvnwx")
}],
"loop": true,
"name": &"gone",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_clvyn"]
atlas = ExtResource("36_sarkg")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8m2u"]
atlas = ExtResource("37_o76y0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_5psol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clvyn")
}],
"loop": true,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8m2u")
}],
"loop": true,
"name": &"On",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5psol"]
atlas = ExtResource("38_uxvug")
region = Rect2(0, 0, 1000, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_m4llh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5psol")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="Heating" type="Node" parent="."]
script = ExtResource("1_d0ro7")

[node name="Power" type="Node" parent="."]
script = ExtResource("2_uwk6c")

[node name="Powersupply" type="Button" parent="Power"]
z_index = 50
offset_left = 31.0
offset_top = 192.0
offset_right = 200.0
offset_bottom = 421.0
scale = Vector2(0.99369806, 1.0365038)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_colors/font_focus_color = Color(0.9490196, 0.9490196, 0.9490196, 1)
metadata/_edit_use_anchors_ = true

[node name="ChargeSprite" type="AnimatedSprite2D" parent="Power/Powersupply"]
position = Vector2(101.99999, 119.00003)
scale = Vector2(0.32400003, 0.32400003)
sprite_frames = SubResource("SpriteFrames_bmxlf")
autoplay = "default"

[node name="Panel" type="Panel" parent="Power"]
offset_right = 170.0
offset_bottom = 55.0
scale = Vector2(0.99369806, 1.0365038)
metadata/_edit_use_anchors_ = true

[node name="Powerlabel" type="Label" parent="Power/Panel"]
z_index = 600
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -17.5
offset_right = 66.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Power: 100"
metadata/_edit_use_anchors_ = true

[node name="Screen" type="Node" parent="."]
script = ExtResource("6_qupvh")

[node name="ScreenSprite" type="AnimatedSprite2D" parent="Screen"]
visible = false
z_index = 100
position = Vector2(564, 373.00003)
scale = Vector2(1.0252837, 1.0694498)
sprite_frames = SubResource("SpriteFrames_jw32o")
autoplay = "default"

[node name="ScreenButton" type="Button" parent="Screen"]
z_index = 120
offset_left = 356.0
offset_top = 573.0
offset_right = 784.0
offset_bottom = 626.0
scale = Vector2(0.99369806, 1.0365038)
text = "Screen
"

[node name="ScreenStatus" type="Node" parent="."]
script = ExtResource("8_637a8")

[node name="Blink" type="Node" parent="."]
script = ExtResource("9_w3en0")

[node name="BlinkButton" type="Button" parent="Blink"]
z_index = 500
offset_left = 1035.0
offset_top = 552.0
offset_right = 1115.6604
offset_bottom = 627.0
scale = Vector2(0.99369806, 1.0365038)
text = "blink
"
metadata/_edit_use_anchors_ = true

[node name="BlinkSprite" type="AnimatedSprite2D" parent="Blink"]
visible = false
z_index = 450
position = Vector2(602, 350)
scale = Vector2(14.162498, 8.197499)
sprite_frames = SubResource("SpriteFrames_4kpch")

[node name="BlinkStatus" type="Node" parent="."]
script = ExtResource("11_hb331")

[node name="Robots" type="Node" parent="."]

[node name="FalseHuman" type="Node" parent="Robots"]
script = ExtResource("12_hh621")

[node name="FalseSprite" type="AnimatedSprite2D" parent="Robots/FalseHuman"]
visible = false
z_index = 50
position = Vector2(669, 349.99997)
scale = Vector2(1.2179999, 1.2179999)
sprite_frames = SubResource("SpriteFrames_h1m7h")
autoplay = "default"

[node name="Leave" type="AudioStreamPlayer2D" parent="Robots/FalseHuman"]
position = Vector2(593, 436)
stream = ExtResource("15_iu7dq")

[node name="Breathing" type="AudioStreamPlayer2D" parent="Robots/FalseHuman"]
position = Vector2(591, 435)
stream = ExtResource("16_wahdi")
volume_db = -3.794

[node name="Scream" type="AudioStreamPlayer2D" parent="Robots/FalseHuman"]
stream = ExtResource("17_lwyey")

[node name="TheAware" type="Node" parent="Robots"]
script = ExtResource("18_1cppf")

[node name="AwareSprite" type="AnimatedSprite2D" parent="Robots/TheAware"]
position = Vector2(570, 312)
scale = Vector2(0.5244999, 0.5244999)
sprite_frames = SubResource("SpriteFrames_kpo4j")
animation = &"Hide"
autoplay = "Hide"

[node name="AwareShocked" type="AudioStreamPlayer2D" parent="Robots/TheAware"]
stream = ExtResource("24_576as")

[node name="Aware_Jumpscare" type="AnimatedSprite2D" parent="Robots/TheAware"]
visible = false
z_index = 50
position = Vector2(599.00006, 355.00003)
scale = Vector2(1.198, 1.198)
sprite_frames = SubResource("SpriteFrames_5jffn")

[node name="Aware_Jumpscaresound" type="AudioStreamPlayer2D" parent="Robots/TheAware"]
stream = ExtResource("26_yunic")

[node name="Stall" type="Node" parent="Robots"]
script = ExtResource("27_jol3d")

[node name="error1" type="Button" parent="Robots/Stall"]
visible = false
z_index = 130
offset_left = 356.0
offset_top = 102.0
offset_right = 764.0
offset_bottom = 510.0
icon = ExtResource("28_n44lc")
flat = true

[node name="Power_drain" type="Node" parent="Robots/Stall"]
script = ExtResource("29_a8b36")

[node name="ErSound" type="AudioStreamPlayer2D" parent="Robots/Stall"]
stream = ExtResource("30_2v721")

[node name="Stall_jumpscare" type="AnimatedSprite2D" parent="Robots/Stall"]
visible = false
z_index = 50
position = Vector2(541, 369)
scale = Vector2(1.162, 1.162)
sprite_frames = SubResource("SpriteFrames_6heos")

[node name="Stall_Jump" type="AudioStreamPlayer2D" parent="Robots/Stall"]
stream = ExtResource("32_6nivd")
volume_db = 2.019

[node name="Crooked" type="Node" parent="Robots"]
script = ExtResource("33_4lb3r")

[node name="Crooked_Sprite" type="AnimatedSprite2D" parent="Robots/Crooked"]
visible = false
z_index = 125
position = Vector2(815, 268)
scale = Vector2(0.29250008, 0.29250008)
sprite_frames = SubResource("SpriteFrames_btbly")
animation = &"gone"

[node name="HeatButton" type="Button" parent="Robots/Crooked"]
visible = false
z_index = 120
offset_left = 689.0
offset_top = 422.0
offset_right = 801.0
offset_bottom = 456.0
text = "Heating"

[node name="Fan" type="AnimatedSprite2D" parent="Robots/Crooked"]
visible = false
z_index = 120
position = Vector2(901, 466)
sprite_frames = SubResource("SpriteFrames_5psol")
animation = &"On"

[node name="Crooked_Jumpscare" type="AnimatedSprite2D" parent="Robots/Crooked"]
visible = false
z_index = 50
position = Vector2(594, 369)
scale = Vector2(1.184, 1.184)
sprite_frames = SubResource("SpriteFrames_m4llh")

[node name="Crook_scream" type="AudioStreamPlayer2D" parent="Robots/Crooked"]
stream = ExtResource("39_qxgqg")

[node name="Shock" type="Node" parent="."]
script = ExtResource("40_65yj4")

[node name="ShockButton" type="Button" parent="Shock"]
offset_left = 839.0
offset_top = 278.0
offset_right = 909.0
offset_bottom = 373.0
text = "shock"

[node name="ShockStatus" type="Node" parent="."]
script = ExtResource("41_x68vh")

[node name="Downloads" type="Node" parent="."]
script = ExtResource("42_7umhw")

[node name="File 1" type="Button" parent="Downloads"]
visible = false
z_index = 120
offset_left = 134.0
offset_top = 206.0
offset_right = 311.0
offset_bottom = 270.0
text = "File 1"

[node name="F1process" type="Label" parent="Downloads/File 1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "0%"

[node name="File 2" type="Button" parent="Downloads"]
visible = false
z_index = 120
offset_left = 134.0
offset_top = 300.0
offset_right = 311.0
offset_bottom = 364.0
text = "File 2
"

[node name="F2 process" type="Label" parent="Downloads/File 2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "0%"

[node name="File 3" type="Button" parent="Downloads"]
visible = false
z_index = 120
offset_left = 134.0
offset_top = 390.0
offset_right = 311.0
offset_bottom = 454.0
text = "File 3"

[node name="F3 process" type="Label" parent="Downloads/File 3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "0%"

[node name="Tasks" type="Node" parent="."]
script = ExtResource("43_bxs6h")

[connection signal="button_down" from="Power/Powersupply" to="Power" method="_on_powersupply_button_down"]
[connection signal="button_up" from="Power/Powersupply" to="Power" method="_on_powersupply_button_up"]
[connection signal="button_down" from="Screen/ScreenButton" to="Screen" method="_on_screen_button_button_down"]
[connection signal="button_up" from="Screen/ScreenButton" to="Screen" method="_on_screen_button_button_up"]
[connection signal="pressed" from="Screen/ScreenButton" to="Power" method="_on_screen_button_pressed"]
[connection signal="pressed" from="Screen/ScreenButton" to="Screen" method="_on_screen_button_pressed"]
[connection signal="pressed" from="Blink/BlinkButton" to="Blink" method="_on_blink_button_pressed"]
[connection signal="button_up" from="Robots/Stall/error1" to="Robots/Stall" method="_on_error_1_button_up"]
[connection signal="toggled" from="Robots/Stall/error1" to="Robots/Stall" method="_on_error_1_toggled"]
[connection signal="pressed" from="Robots/Crooked/HeatButton" to="Robots/Crooked" method="_on_heat_button_pressed"]
[connection signal="pressed" from="Shock/ShockButton" to="Shock" method="_on_shock_button_pressed"]
[connection signal="pressed" from="Shock/ShockButton" to="Shock/ShockButton" method="_on_pressed"]
[connection signal="button_down" from="Downloads/File 1" to="Downloads" method="_on_file_1_button_down"]
[connection signal="button_up" from="Downloads/File 1" to="Power" method="_on_file_1_button_up"]
[connection signal="button_up" from="Downloads/File 1" to="Downloads" method="_on_file_1_button_up"]
[connection signal="button_down" from="Downloads/File 2" to="Downloads" method="_on_file_2_button_down"]
[connection signal="button_up" from="Downloads/File 2" to="Downloads" method="_on_file_2_button_up"]
[connection signal="button_down" from="Downloads/File 3" to="Downloads" method="_on_file_3_button_down"]
[connection signal="button_up" from="Downloads/File 3" to="Downloads" method="_on_file_3_button_up"]
